# SSL-Seg

./: .gitignore  pyproject.toml  submit_slurm.py  test.py  test_dino_v3.py  train_semi-supervised.py
.tensorboard-info/: pid-3034631.info  pid-3119488.info
config/: 2025-11-01=13-16-38_test_train.yaml  2025-11-01=14-01-17_test_train.yaml  2025-11-01=14-04-12_test_train.yaml  2025-11-01=14-04-51_test_train.yaml  2026-02-25=16-29-43_test_train.yaml  2026-02-25=16-32-59_test_train.yaml  2026-02-25=17-39-06_without-sam_train.yaml  2026-02-26=15-01-39_without-sam_train.yaml  2026-02-26=15-09-27_without-sam_train.yaml  2026-02-26=21-22-57_sam-test_train.yaml  2026-03-01=18-05-44_sam-test-vit_l_train.yaml  2026-03-01=18-36-12_sam-test-vit_l_train.yaml  2026-03-01=19-32-13_sam-test-medsam-vit_l_train.yaml  2026-03-01=20-42-41_sam-test-medsam-refined_train.yaml  2026-03-01=22-04-31_sam-test-medsam-refined_train.yaml  2026-03-10=11-47-38_c3ps_2d_acdc_train.yaml  2026-03-14=14-15-54_debug_train.yaml  2026-03-14=15-38-59_debug_train.yaml  2026-03-14=16-03-51_debug_train.yaml  2026-03-14=16-48-36_debug_train.yaml  2026-03-14=18-59-02_debug_train.yaml  2026-03-14=22-22-47_reweight_sampling_train.yaml  2026-03-15=13-03-02_Adam_for_condition_model_train.yaml  2026-03-15=17-00-57_Adam_for_condition_model_train.yaml  2026-03-15=17-18-17_embedding_con_train.yaml  2026-03-15=22-06-10_condition_model_film_train.yaml  2026-03-16=12-10-21_cond_mode_film_began_semi2000_con4000_train.yaml
configs/: config.py  train_config_2d.yaml  train_config_2d_c3ps_acdc.yaml  train_config_3d.yaml
(+54 files in other folders)
